<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:layout_width="wrap_content"
        android:checkableBehavior="single">

        <TextView
            android:layout_width="140dp"
            android:layout_height="32dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="number"
            android:textColor="#ffffff"
            android:textColorHint="@color/colorAccent"
            android:textSize="22dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.847"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
        <item
            android:id="@+id/id"
            android:icon="@drawable/email"
            android:title="@string/example_email"/>


        <item
            android:id="@+id/textView7"
            android:icon="@drawable/cow"
            android:title="@string/_263_cattles" />

        <item
            android:id="@+id/age_id"
            android:icon="@drawable/age"
            android:title="@string/age_38" />

        <item
            android:id="@+id/phone_id"
            android:icon="@drawable/phone"
            android:title="@string/phone" />


        <item
            android:id="@+id/logout"
            android:icon="@drawable/signout"
            android:title="@string/sign_out" />

    </group>


</menu>